# drc_engine

./: .gitignore  .gitmodules  CMakeLists.txt  ENVIRONMENT.md  PLANNING.md  README.md
3rd/: sol
docs/: experience-with-ai-agent.md
docs/superpowers/plans/: 2026-06-10-mpi-drc-implementation.md
docs/superpowers/specs/: 2026-06-10-mpi-drc-design.md  2026-06-12-worker-error-propagation.md
include/db/: dbNetlistCompare.h  dbRecursiveInstanceIterator.h  dbRecursiveShapeIterator.h  dbStream.h
include/db/gsi_stubs/: gsi.h  gsiClass.h  gsiClassBase.h  gsiDecl.h  gsiExpression.h  gsiObject.h
include/drc/: engine.h  lua_binding.h
include/tl/: tlFileSystemWatcher.h  tlWebDAV.h
lua/: alm_drc.lua  example.drc  spatial_drc.lua
src/cli/: CMakeLists.txt  main.cc
src/db/: CMakeLists.txt  dbShapes.cc
src/drc/: CMakeLists.txt  engine.cc  lua_binding.cc
src/gds/: CMakeLists.txt
src/mpi/: CMakeLists.txt  halo_inferrer.cc  halo_inferrer.h  mpi_binding.cc  mpi_binding.h  mpi_master.cc  mpi_master.h  mpi_protocol.cc  mpi_protocol.h  mpi_serialize.cc  mpi_serialize.h  mpi_worker.cc  mpi_worker.h  script_analyzer.cc  script_analyzer.h
src/rdb/: CMakeLists.txt
src/tl/: CMakeLists.txt
testdata/: gen_test_layouts.py  gen_testdata.py  klayout_migration.lua  mpi_scenarios.lua  run_tests.lua  test.lua  test_drc.gds  test_edge_cases.lua
testdata/layouts/: area_filter.gds  basic_input.gds  boolean_ops.gds  chained_ops.gds  compound_boolean_edges.gds  corner_detection.gds  drc_checks.gds  drc_exact.gds  edge_extended.gds  edge_ops.gds  edge_segments.gds  edge_type_ops.gds  enclosure_check.gds  extended_generic.gds  extreme_geometry.gds  klayout_basic.gds  klayout_boolean.gds  klayout_corners.gds  klayout_edges.gds  klayout_enclosure.gds  klayout_selection.gds  klayout_setup.gds  klayout_sizing.gds  klayout_space.gds  klayout_width.gds  merge_test.gds  output_test.gds  perimeter_test.gds  selection_test.gds  sizing_test.gds  tile_boundary_test.gds  width_space_check.gds
tests/: CMakeLists.txt  gen_large_layout.cc  run_mpi_integration.sh  test_engine.cc  test_integration.cc  test_mpi_serialize.cc  test_script_analyzer.cc
